# Hi3531-mpp

./: CMakeLists.txt  HisiBase.cpp  HisiHdmi.cpp  HisiStartVideo.cpp  HisiSysvbmipi.cpp  HisiVin.cpp  HisiVo.cpp  HisiVpss.cpp  README.md  main.cpp  tags
inc/: HisiBase.h  HisiHdmi.h  HisiStartVideo.h  HisiSysvbmipi.h  HisiVin.h  HisiVo.h  HisiVpss.h
include/: autoconf.h  hi_aacdec.h  hi_aacenc.h  hi_ao_export.h  hi_buffer.h  hi_cipher_types.h  hi_common.h  hi_common_adec.h  hi_common_aenc.h  hi_common_aio.h  hi_common_cipher.h  hi_common_gdc.h  hi_common_hdmi.h  hi_common_ive.h  hi_common_otp.h  hi_common_pciv.h  hi_common_rc.h  hi_common_region.h  hi_common_runtime.h  hi_common_svp.h  hi_common_sys.h  hi_common_tde.h  hi_common_vb.h  hi_common_vdec.h  hi_common_venc.h  hi_common_vgs.h  hi_common_vi.h  hi_common_video.h  hi_common_vo.h  hi_common_vpss.h  hi_debug.h  hi_defines.h  hi_errno.h  hi_ir_hal.h  hi_ivs_md.h  hi_math.h  hi_mcc_usrdev.h  hi_mipi_rx.h  hi_mpi_audio.h  hi_mpi_cipher.h  (+33 more)
lib/: HisiBase.h
